<resources>
    <string name="app_name">GMS</string>

    <string name="signup">Signup</string>

    <string name="please_wait">Please Wait ...</string>
    <string name="logging_out">Logging Out ...</string>
    <!-- Main Menu -->
    <string name="menu_notes">Notes</string>
    <string name="menu_minutes">Minutes</string>
    <string name="menu_contributions">Contributions</string>
    <string name="menu_voting">Voting</string>
    <string name="menu_members">Members</string>
    <string name="menu_calendar">Calendar</string>

    <!-- Drawer Main Menu -->

    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Bio description ...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout"><u>Log</u>out</string>

    <!-- Minutes Module Menu -->
    <string name="menu_new_min">New</string>
    <string name="menu_previous_min">Previous</string>
    <string name="menu_search_min">Search</string>
    <string name="menu_agenda_min">Agenda</string>
    <string name="menu_notes_min">New Notes</string>
    <string name="set_agenda_for_the_meeting">Set Agenda for the Meeting?</string>
    <string name="add_note">Add Note</string>
    <string name="new_note">New Note</string>
    <string name="enter_your_name_as_it_appear_on_id">Enter your Name as it appear on ID</string>
    <string name="enter_your_membership_code">Enter your Membership Code</string>
    <string name="enter_your_national_id">Enter your National ID</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="minute"><u>Minute</u></string>
    <string name="notes"><u>Notes</u></string>
    <string name="title"><u>Title</u></string>
    <string name="time"><u>Date/Time</u></string>

</resources>
