<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="top">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="0.01dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <LinearLayout
        android:id="@+id/LtPage1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_name_as_it_appear_on_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack"
                   />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_fullname"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/enter_your_membership_code"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_membercode"
                    android:inputType="textCapCharacters"
                    android:enabled="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>

    </LinearLayout>
            <LinearLayout
                android:id="@+id/LtPage2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/enter_your_national_id"
                    android:textColor="@color/colorBlack"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nationalid"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/enter_your_email_address"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Enter your Mobile No"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_mobileno"
                    android:inputType="textPhonetic"
                    android:enabled="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="5dp"
                        app:backgroundTint="@color/red_500"
                        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
                        tools:ignore="VectorDrawableCompat" />


                </LinearLayout>
            </LinearLayout>




        </LinearLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>