<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="18dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="0.01dp">

                    <LinearLayout
                        android:id="@+id/ltNew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_minute_new"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="2dp"
                            android:text="@string/menu_new_min"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="0.01dp">

                    <LinearLayout
                        android:id="@+id/ltPrevious"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/textView4"
                            android:layout_centerHorizontal="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_calendar"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="2dp"
                            android:text="@string/menu_previous_min"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="0.01dp">


                    <LinearLayout
                        android:id="@+id/ltSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_search"
                            android:tint="@color/colorPrimary"
                            />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="2dp"
                            android:text="@string/menu_search_min"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"
                            android:textStyle="bold"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="0.01dp"/>
            </TableRow>



        </TableLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_buttons"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:text="@string/minute"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/time"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_weight="1"/>

            </TableRow>

                <ListView
                    android:id="@+id/lvMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/colorPrimary"
                    android:dividerHeight="2.0dip"
                    android:choiceMode="singleChoice"
                    android:layout_weight="2.4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>